// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello component Should render the Hello component 1`] = `
<DocumentFragment>
  <main
    class="o-main o-main--high"
  >
    <section
      class="c-section c-section--hello"
      id="hello"
    >
      <div
        class="c-canvas"
        id="canvas"
      />
      <div
        class="c-slider"
      >
        <h1>
          <div
            class="c-slider__animation"
            style="width: 100px; height: 100px; margin-left: auto; margin-right: auto;"
          />
          I am Atanas Atanasov
        </h1>
        <h2>
          <span
            class="current"
          >
            lead front-end engineer at E.ON
          </span>
          <span>
            senior software engineer at Toptal
          </span>
          <span>
            founding member at Braintrust
          </span>
          <span>
            a Typescript fanatic
          </span>
          <span>
            a CSS wizard
          </span>
          <span>
            a Javascript tinkerer
          </span>
          <span>
            a minimalist
          </span>
          <span>
            an open source enthusiast
          </span>
          <span>
            a maker of things
          </span>
          <span>
            an a11y and UX advocate
          </span>
          <span>
            a front-end magician
          </span>
          <span>
            a bug fixer
          </span>
          <span>
            a senior web developer
          </span>
          <span>
            I am into data visualization
          </span>
          <span>
            an UI architect
          </span>
          <span>
            I am obsessed with quality
          </span>
          <span>
            a web standards fanatic
          </span>
          <span>
            a Javascript master
          </span>
          <span>
            a NodeJS hacker
          </span>
          <span>
            a father
          </span>
          <span>
            a husband
          </span>
        </h2>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Hello component Should unmount the Hello component 1`] = `<DocumentFragment />`;

exports[`Slider component Should render the Slider component 1`] = `
<DocumentFragment>
  <div
    class="c-slider"
  >
    <h1>
      <div
        class="c-slider__animation"
        style="width: 100px; height: 100px; margin-left: auto; margin-right: auto;"
      />
      I am Atanas Atanasov
    </h1>
    <h2>
      <span
        class="current"
      >
        lead front-end engineer at E.ON
      </span>
      <span>
        senior software engineer at Toptal
      </span>
      <span>
        founding member at Braintrust
      </span>
      <span>
        a Typescript fanatic
      </span>
      <span>
        a CSS wizard
      </span>
      <span>
        a Javascript tinkerer
      </span>
      <span>
        a minimalist
      </span>
      <span>
        an open source enthusiast
      </span>
      <span>
        a maker of things
      </span>
      <span>
        an a11y and UX advocate
      </span>
      <span>
        a front-end magician
      </span>
      <span>
        a bug fixer
      </span>
      <span>
        a senior web developer
      </span>
      <span>
        I am into data visualization
      </span>
      <span>
        an UI architect
      </span>
      <span>
        I am obsessed with quality
      </span>
      <span>
        a web standards fanatic
      </span>
      <span>
        a Javascript master
      </span>
      <span>
        a NodeJS hacker
      </span>
      <span>
        a father
      </span>
      <span>
        a husband
      </span>
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Slider component Should unmount the Slider component 1`] = `<DocumentFragment />`;
